# agent-playground

./: README.md  coding-models-comparison-2026.md
pdf-extractor-analyzer/: .gitignore  CHANGELOG.md  PLAN.md  README.md  TODO-BUGS.md  TODO.md  pyproject.toml  pytest.ini
pdf-extractor-analyzer-tutorial/: README.md  chapters.json  index.html  package-lock.json  package.json
pdf-extractor-analyzer/.pi/todos/: 31799186.md  7a37ace7.md  b22d569d.md
pdf-extractor-analyzer/docs/: providers.md
pdf-extractor-analyzer/src/pdf_extractor_analyzer/: __init__.py  analyzer.py  cache.py  cli.py  config.py  converter.py  exceptions.py  pipeline.py  provider_factory.py  schemas.py
pdf-extractor-analyzer/src/pdf_extractor_analyzer/adapters/: __init__.py
pdf-extractor-analyzer/src/pdf_extractor_analyzer/adapters/llm/: __init__.py  openrouter_adapter.py  replicate_adapter.py
pdf-extractor-analyzer/src/pdf_extractor_analyzer/ports/: __init__.py  llm_provider.py
pdf-extractor-analyzer/tests/: conftest.py  test_analyzer.py  test_batch.py  test_cache.py  test_cli.py  test_config.py  test_config_provider.py  test_converter.py  test_deprecations_phase10.py  test_exceptions.py  test_exports_phase9.py  test_openrouter_adapter.py  test_packaging_phase9.py  test_phase10_regression.py  test_pipeline.py  test_pipeline_phase6.py  test_pipeline_provider_factory.py  test_ports_llm_provider.py  test_provider_factory.py  test_replicate_adapter.py
pdf-extractor-analyzer/tests/integration/: test_live_openrouter.py  test_live_replicate.py
sample-openclaw-agent-php-tutorial/: README.md  (+4 more)
(+95 files in other folders)
